--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   }
   
   body {
-    font-family: 'Arial', serif;
+    font-family: 'Avenir Next Condensed';
     color: white;
     margin: 0;
     padding: 2rem;
@@ -66,6 +66,6 @@
   }
   
   .topnav a.active {
-    background-color: lightblue;
+    background-color: #777;
     color: white;
   }
